1.0a9 (2009-07-01)
==================

Features
--------

- Make it possible to pass strings in the form
  "package_name:relative/path" to APIs like ``render_template``,
  ``render_template_to_response``, and ``get_template``.  Sometimes
  the package in which a caller lives is a direct namespace package,
  so the module which is returned is semi-useless for navigating from.
  In this way, the caller can control the horizontal and vertical of
  where things get looked up from.

1.0a8 (2009-07-01)
==================

Deprecations
------------

- Deprecate the ``authentication_policy`` and ``authorization_policy``
  arguments to ``repoze.bfg.router.make_app``.  Instead, developers
  should use the various authentication policy ZCML directives
  (``repozewho1authenticationpolicy``,
  ``remoteuserauthenticationpolicy`` and
  ``authtktauthenticationpolicy``) and the `aclauthorizationpolicy``
  authorization policy directive as described in the changes to the
  "Security" narrative documenation chapter and the wiki tutorials.

Features
--------

- Add three new ZCML directives which configure authentication
  policies:

  - ``repozewho1authenticationpolicy``

  - ``remoteuserauthenticationpolicy``

  - ``authtktauthenticationpolicy``

- Add a new ZCML directive which configures an ACL authorization
  policy named ``aclauthorizationpolicy``.

Bug Fixes
---------

- Bug fix: when a ``repoze.bfg.resource.PackageOverrides`` class was
  instantiated, and the package it was overriding already had a
  ``__loader__`` attribute, it would fail at startup time, even if the
  ``__loader__`` attribute was another PackageOverrides instance.  We
  now replace any ``__loader__`` that is also a PackageOverrides
  instance.  Symptom: ``ConfigurationExecutionError: <type
  'exceptions.TypeError'>: Package <module 'karl.views' from
  '/Users/chrism/projects/osi/bfgenv/src/karl/karl/views/__init__.pyc'>
  already has a __loader__ (probably a module in a zipped egg)``.

1.0a7 (2009-06-30)