@@ -3,3 +3,6 @@ from zope.interface import Interface
 class IFixture(Interface):
     pass
 
+def fixture():
+    """ """
+
