@@ -1,3 +1,15 @@
+Next release
+============
+
+Features
+--------
+
+- Allow a Paste config file (``configure_zcml``) value or an
+  environment variable (``BFG_CONFIGURE_ZCML``) to name a ZCML file
+  that will be used to bootstrap the application.  Previously, the
+  integrator could not influence which ZCML file was used to do the
+  boostrapping (only the original application developer).
+
 1.0a9 (2009-07-01)
 ==================
 
